[package]
name = "phpcode"
version = "0.1.0"
authors = ["徐智 <xuzhi@gmail.com>"]

[dependencies]
# rocket = { path = "../lib/Rocket/lib" }
# rocket_codegen = { path = "../lib/Rocket/codegen" }
# rocket_contrib = { path = "../lib/Rocket/contrib" }
rocket = "0.3.6"
rocket_codegen = "0.3.6"
# rocket_contrib = "*"
rustache = "*"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"

toml = "*"

[dependencies.rocket_contrib]
# path = "../lib/Rocket/contrib"
version = "*"
default-features = false
features = ["handlebars_templates"]

[dependencies.mysql]
version = "*"
features = ["rustc-serialize"]
